# claude-code-config

./: .gitignore  ADMIN-GUIDE.md  CLAUDE.md  ENVIRONMENT-VARIABLES.md  IMPLEMENTATION-SUMMARY.md  LICENSE  MAINTAINING.md  README-PUBLIC.md  README.md  UPDATE-VS-UPGRADE.md  UPDATING.md  USAGE.md  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
examples/: README.md  sources-local.json  sources-multi.json  sources-zip.json
examples/config-template/: README.md  manifest.json
examples/config-template/core/: CLAUDE.md  settings.json  statusline.sh
examples/config-template/plugins/: required.json
src/claude_setup/: __init__.py  __main__.py  backup.py  categories.py  cli.py  create_config.py  display.py  init.py  installer.py  merge.py  plugins.py  sources.py  version.py
tests/: conftest.py  test_backup.py  test_categories.py  test_create_config.py  test_display.py  test_env_vars.py  test_init_wizard.py  test_installer.py  test_merge.py  test_plugins.py  test_populated_claude_dir_fixture.py  test_sources.py
