[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-setup"
version = "3.3.0"
description = "Interactive CLI installer for Claude Code team configuration"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Travis Jorge", email = "travis.jorge@tylertech.com"},
]
license = {text = "MIT"}
keywords = ["claude", "cli", "configuration", "team-setup"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "typer>=0.9.0,<1.0.0",
    "rich>=13.0.0,<14.0.0",
    "questionary>=2.0.0,<3.0.0",
]

[project.urls]
Homepage = "https://github.com/travis-jorge/claude-code-config"
Repository = "https://github.com/travis-jorge/claude-code-config"
Issues = "https://github.com/travis-jorge/claude-code-config/issues"
Documentation = "https://github.com/travis-jorge/claude-code-config#readme"

[project.scripts]
claude-setup = "claude_setup.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/claude_setup"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
